2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/12_print_guillement_simple.deca
// Description:
//    Programme avec guillemet simple 
// Resultats:
//    helloo world! ' je suis !
//
// Historique:
//    cree le 20/12/2023


{
    println("helloo world! ' je suis !");
}