2A/05_Projet_GL/src/test/deca/syntax/invalid/HelloWorld/11_retour_a_la_ligne_dans_string.deca
// Description:
//    Programme print multi_line
//
// Resultats:
//    Erreur syntaxique :10:10: extraneous input '"Hello \n    world"' expecting ')'
//
// Historique:
//    cree le 20/12/2023
{
    print("Hello 
    world");
}